# waluigi

./: Cargo.toml  README.md
programs/: curv.yaml
spec/: exp-curv.yaml  exp-interdict.yaml  interdict-validate.yaml  interdict.yaml
src/: errors.rs  structs.rs  waluigi.rs  waluigid.rs
